<resources>
    <string name="app_name">WinCara(xml)</string>
    <string name="username">username_input</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="login_input">Login</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="account">Don\'t have an account?</string>
    <string name="sign_up_account">Sign Up</string>
    <string name="log_in_account">Log in</string>
    <string name="already_id">Already have an account?</string>
    <string name="Sign_up_btn">Sign up</string>
    <string name="fname_input">First Name</string>
    <string name="lname_input">Last Name</string>
    <string name="gender">Gender</string>
    <string name="department">Department</string>
</resources>