<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username_input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_input"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/login_input"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:padding="18dp"
            android:text="@string/Sign_up_btn"
            android:textColor="@color/blue" />

    </LinearLayout>








</RelativeLayout>