<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center_horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".SignupActivity">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

            <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo" />

            <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="Username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />



            <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_input"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

            <EditText
                android:id="@+id/gender_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/gender"
                android:importantForAutofill="no"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                />


            <EditText
                android:id="@+id/department_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="140dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/department"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                 />




            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

                <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:paddingBottom="12dp"
                android:text="@string/Sign_up_btn"
                android:textColor="@color/blue" />

        </LinearLayout>

</RelativeLayout>